# src/controllers/user.controller.ts
@@ -5,9 +5,9 @@ import { formatPaginationParams, prepareResponse } from '@/utils';
 class UserController {
   constructor(private readonly userService: UserService) {}
 
-  registerUser = async (req: Request, res: Response, next: NextFunction) => {
+  createUser = async (req: Request, res: Response, next: NextFunction) => {
     try {
-      await this.userService.register(req.body);
+      await this.userService.createUser(req.body);
       return res.json(prepareResponse(200, 'Successful operation'));
     } catch (error) {
       next(error);
