# src/routes/auth.route.ts
@@ -1,9 +1,9 @@
 import { Router } from 'express';
-// import { authController } from '../controllers';
+import { authController } from '../controllers';
 
 const router = Router();
 
-// router.post('/login', authController.login);
+router.post('/login', authController.login);
 // router.get('/current-user', authController.currentUser);
 // router.post('/reset-password/initiate', authController.initiateResetPassword);
 // router.post('/reset-password/complete', authController.completeResetPassword);
