# src/routes/pay-slip.route.ts
@@ -7,7 +7,7 @@ const router = Router();
 router.get('/pay-slips/:id', paySlipController.getPaySlip);
 router.patch('/pay-slips/:id', paySlipController.updatePaySlip);
 router.delete('/pay-slips/:id', paySlipController.deletePaySlip);
-router.post('/pay-slips/upload', validateFile, paySlipController.uploadPaySlip);
+router.post('/pay-slips', validateFile, paySlipController.uploadPaySlip);
 router.get('/users/:id/pay-slips', paySlipController.getPaySlipsByUserId);
 
 export default router;
