# src/routes/user.route.ts
@@ -4,7 +4,7 @@ import { pagination } from '@/middlewares/pagination.middleware';
 
 const router = Router();
 
-router.post('/register', userController.registerUser);
+router.post('/users', userController.createUser);
 router.get('/users', pagination, userController.getAllUsers);
 router.get('/users/:id', userController.getUserById);
 router.patch('/users/:id', userController.updateUserById);
